<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lightwhite"
    tools:context=".DeveloperFragment">


    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <View
            android:id="@+id/topView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorPrimary"/>

        <View
            android:id="@+id/view5"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/wave"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:padding="10dp"
            android:text="THE DEVELOPER"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Developer's Name:"
            android:textStyle="bold|italic"
            android:textColor="@color/headings"
            android:textSize="20sp"
            android:padding="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/square_border"
            android:text="@string/developer_name"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="25sp"
            android:padding="15dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#fff"
            android:layout_margin="10dp"
            />

        <TextView
            android:padding="15dp"
            android:textColor="@color/headings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Developer's Specialty:"
            android:textStyle="bold|italic"
            android:textSize="20sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/square_border"
            android:text="@string/mobile_app_games_dev_ui_ux_full_stack_web_dev"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="15dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#fff"
            android:layout_margin="10dp"
            />

        <TextView
            android:padding="15dp"
            android:textColor="@color/headings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Developer's Skills:"
            android:textStyle="bold|italic"
            android:textSize="20sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/square_border"
            android:text="@string/developer_skills"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="15dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#fff"
            android:layout_margin="10dp"
            />

        <TextView
            android:padding="15dp"
            android:textColor="@color/headings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Phone Number:"
            android:textStyle="bold|italic"
            android:textSize="20sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/square_border"
            android:text="@string/developer_phone"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="15dp"
            android:autoLink="phone"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#fff"
            android:layout_margin="10dp"
            />

        <TextView
            android:padding="15dp"
            android:textColor="@color/headings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Email:"
            android:textStyle="bold|italic"
            android:textSize="20sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/square_border"
            android:text="@string/developer_email"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="15dp"
            android:autoLink="email"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#fff"
            android:layout_margin="10dp"
            />

        <TextView
            android:padding="15dp"
            android:textColor="@color/headings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Whatsapp:"
            android:textStyle="bold|italic"
            android:textSize="20sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/square_border"
            android:text="@string/developer_whatsapp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="15dp"
            android:autoLink="all"/>

    </LinearLayout>

</ScrollView>