<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lightwhite"
    tools:context=".CarHiringFragment">


    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <View
            android:id="@+id/topView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorPrimary"/>

        <View
            android:id="@+id/view5"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/wave"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:padding="10dp"
            android:text="Car Reservation"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:padding="10dp"
            android:text="@string/car_hiring2"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/square_border"
            android:elevation="5dp"
            android:hint="Pick Up Location"
            android:inputType="textShortMessage|textMultiLine|textCapSentences|textAutoCorrect"
            android:paddingLeft="15dp"
            android:textColorHint="@color/colorPrimaryDark" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#fff"
            android:layout_margin="10dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/square_border"
            android:elevation="5dp"
            android:hint="Destination"
            android:paddingLeft="15dp"
            android:textColorHint="@color/colorPrimaryDark"
            android:inputType="textShortMessage|textMultiLine|textCapSentences|textAutoCorrect"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#fff"
            android:layout_margin="10dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/square_border"
            android:elevation="5dp"
            android:hint="Pick Up Date"
            android:paddingLeft="15dp"
            android:textColorHint="@color/colorPrimaryDark"
            android:inputType="textShortMessage|textMultiLine|textCapSentences|textAutoCorrect"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#fff"
            android:layout_margin="10dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/square_border"
            android:elevation="5dp"
            android:hint="Kindly Provide Other Necessary Details"
            android:paddingLeft="15dp"
            android:textColorHint="@color/colorPrimaryDark"
            android:inputType="textShortMessage|textMultiLine|textCapSentences|textAutoCorrect"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="Full Name"
            android:layout_marginTop="35dp"
            android:inputType="text"
            android:textColorHint="@color/colorPrimaryDark"
            android:paddingLeft="15dp"
            android:background="@drawable/round_border" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#fff"
            android:layout_margin="10dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_border"
            android:elevation="0dp"
            android:ems="10"
            android:hint="Phone Number"
            android:inputType="phone"
            android:paddingLeft="15dp"
            android:textColorHint="@color/colorPrimaryDark" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#fff"
            android:layout_margin="10dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_border"
            android:elevation="0dp"
            android:ems="10"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:paddingLeft="15dp"
            android:textColorHint="@color/colorPrimaryDark" />


        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#fff"
            android:layout_margin="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Payment Gateway:"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold|italic"
            android:textSize="20sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/square_border"
            android:text="@string/payment"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="15dp"
            android:autoLink="web"/>

        <Button
            android:id="@+id/sendmessage"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:text="Send Message"
            android:textSize="25sp"
            android:textColor="@color/whitecolor"
            android:textAllCaps="false"
            android:layout_marginTop="25dp"
            android:elevation="5dp"
            android:background="@drawable/joinbtn"/>



        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#fff"
            android:layout_margin="10dp"
            />

        <TextView
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            android:text="@string/menu_whatsapp"
            android:autoLink="web|phone"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#fff"
            android:layout_margin="10dp"
            />



    </LinearLayout>


</ScrollView>