<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lightwhite"
    tools:context=".ActivityRelocation">


    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <View
            android:id="@+id/topView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorPrimary"/>

        <View
            android:id="@+id/view5"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/wave"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:padding="10dp"
            android:text="Relocation Made Easy"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:padding="10dp"
            android:text="@string/relocation2"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reg_packing_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/square_border"
            android:hint="Packing From e.g N0 12 Gbagi Titun"
            android:textColorHint="@color/colorPrimaryDark"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reg_packing_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/square_border"
            android:hint="Packing To e.g N0 87 Old Bodija"
            android:textColorHint="@color/colorPrimaryDark"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reg_packing_what"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/square_border"
            android:hint="Packing What? e.g Household Appliances"
            android:textColorHint="@color/colorPrimaryDark"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reg_date_relocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/square_border"
            android:hint="Relocation Date e.g. 12/06/2020"
            android:textColorHint="@color/colorPrimaryDark"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reg_other_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/square_border"
            android:hint="Kindly Provide Other Necessary Details"
            android:textColorHint="@color/colorPrimaryDark"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reg_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/square_border"
            android:hint="Full Name e.g Dada Femi"
            android:textColorHint="@color/colorPrimaryDark"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reg_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/square_border"
            android:hint="Phone Number e.g 08011122233"
            android:textColorHint="@color/colorPrimaryDark"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reg_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/square_border"
            android:hint="Email e.g femi@gunit.com"
            android:textColorHint="@color/colorPrimaryDark"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Payment Gateway:"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold|italic"
            android:textSize="18sp"
            android:padding="15dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/square_border"
            android:text="@string/payment"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="15dp"
            android:autoLink="web"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"/>


        <Button
            android:id="@+id/sendmessage"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:text="Send Message"
            android:textSize="25sp"
            android:textColor="@color/whitecolor"
            android:textAllCaps="false"
            android:layout_marginTop="25dp"
            android:elevation="5dp"
            android:background="@drawable/joinbtn" />


        <TextView
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            android:text="@string/menu_whatsapp"
            android:autoLink="web|phone"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:layout_margin="10dp"
            />


    </LinearLayout>


    </LinearLayout>

</ScrollView>